--- a/ecosun/package.json
+++ b/ecosun/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^5.3.7",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
