--- a/ecosun/package.json
+++ b/ecosun/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "framer-motion": "^12.23.11",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "quill": "^2.0.3",
